k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcare-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /patients(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: patient-service
                port:
                  number: 8001
          - path: /appointments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: appointment-service
                port:
                  number: 8002
          - path: /audit(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: audit-service
                port:
                  number: 8003
          - path: /notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 8004
